Shrink selectors pane to avoid overflow under webcam pane.

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ video.webcam {
 
 #selectors {
   display: flex;
+  margin-right: 224px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
